fix line height on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -107,12 +107,14 @@ table th {
     .leftcolumn {
         width: 100%;
         float: none;
+        line-height: 1.5em;
         font-size: 30px;
     }
 
     .rightcolumn {
         float: none;
         width: 100%;
+        line-height: 1.5em;
         font-size: 30px;
     }
 
